@@ -1,5 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST configobj-4.4.0.zip 171350 RMD160 bc1f4edceef66322ddfc460f8e47a2d12431d813 SHA1 2a7b5a34aeff3458a4dc49ce343a1dec88d05195 SHA256 ca09e5a308eaec07749eb74d772f6263dc9d7b7e76787b8c1fb986d34d323803
-EBUILD configobj-4.4.0-r1.ebuild 1026 RMD160 28d2abeaa5b1b62f7e9e0279623f5d87c133118d SHA1 40db0ea781d44c583300b74bb45e1ff39765cdeb SHA256 965bfdb4c106ccab7c5aaba8a772d8fb3c4a996aa75fcafa2ba4c39a460c07c2
+DIST configobj-4.5.2.zip 166376 RMD160 a69935ec51fd267070d8c0517b1b39adfdd5c275 SHA1 6a9e72cf55156a35abb7eb4df756b6884cfb77b6 SHA256 f67b86831c04c6259226e16a5c433833384bdc1ebaedd09ec977afed8d8bf4d9
+EBUILD configobj-4.4.0-r1.ebuild 1023 RMD160 3e53c5430760f86ce8999b3e210066b35cde091e SHA1 4da56125e90b1ae33480425b8e6122aa75d3960a SHA256 5ac5afb1f90ee966330e4209b48e6db1a8f5cdd7f288e27d8cfbce4be6811d1d
 EBUILD configobj-4.4.0.ebuild 885 RMD160 4757f80f2a77df92e92d62cd89ab3cf297edfa56 SHA1 174baea17106113b93dc3b40d2c2db262a329829 SHA256 c7193c9ff924d24e29d3a65ed70470b2e123472b39b20ef18e59f5d36d961608
-MISC ChangeLog 885 RMD160 0f4154872d2304cb2895bbddfac411ec980e8de3 SHA1 4505f1a6ee6875418ec02be1ee83ca1d5efda6c4 SHA256 4ac3dbb619b2ebc4fdabb0a94ce5af8a12e634d57ccacec5b137c5cd363490ac
+EBUILD configobj-4.5.2.ebuild 1053 RMD160 c95017d2239a973b39cef10f95cf07d4885e1602 SHA1 5050b800c651c86ab4d5fe7e1a3b19a989023528 SHA256 892997fe2a1557cc018beb427d82e970f4025ce40921a87b87278f72ad33a2f3
+MISC ChangeLog 1042 RMD160 d2ed714993d6eb3659c6973cdb7cd67891454029 SHA1 0008eb0afda5396c524986870bd53bd4a028b351 SHA256 060702445181c43c16239ce048f32020389513c14e7ad68a9e551b1ce8d9f7e5
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgpaUsACgkQQU4yORhF8iBQ9QCgjLISEBR8v9KrPPAWJToGjdkg
+l5cAnj3pYKm8dU/wAAi+ZtqBGEN2hsgz
+=M0h7
+-----END PGP SIGNATURE-----
