@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/configobj
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/configobj/ChangeLog,v 1.4 2007/07/05 20:15:12 pythonhead Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/configobj/ChangeLog,v 1.5 2008/05/13 10:11:17 hawking Exp $
+
+*configobj-4.5.2 (13 May 2008)
+
+  13 May 2008; Ali Polatel <hawking@gentoo.org> configobj-4.4.0-r1.ebuild,
+  +configobj-4.5.2.ebuild:
+  Version bump. Quoting.
 
   05 Jul 2007; Rob Cakebread <pythonhead@gentoo.org>
   configobj-4.4.0-r1.ebuild:
